--- a/trunk/res/xml/level_tree.xml
+++ b/trunk/res/xml/level_tree.xml
@@ -310,8 +310,13 @@
 	</level>
 	
 </group>
- 
+
 <!-- 
+ <group>
+	<level resource="@raw/performancetest4" title = "@string/level_performance_test2" time = "@string/level_test_time"/>
+</group>
+
+
 <group>
 	<level resource="@raw/puzzles_test" title = "@string/level_puzzle_test" time = "@string/level_test_time"/>
 	<level resource="@raw/objecttestmap" title = "@string/level_object_test" time = "@string/level_test_time"/>
