Public release v1.3. + Rewrote input system to better abstract different hardware from game.  Major rework to this section. + Added nefarious hacks via "Safe Mode" to work around failures in broken GL drivers used by some handsets (Cliq et al). + Various bug fixes and performance improvements. + Cranked up pool sizes to allow for more simultaneous game objects.  (Runtime heap high watermark is now ~6mb) + Fixed bugs in SliderPreference to allow it to be properly instanced. + Added some debug frame rate display tools.

--- a/res/xml/level_tree.xml
+++ b/res/xml/level_tree.xml
@@ -310,8 +310,13 @@
 	</level>
 	
 </group>
- 
+
 <!-- 
+ <group>
+	<level resource="@raw/performancetest4" title = "@string/level_performance_test2" time = "@string/level_test_time"/>
+</group>
+
+
 <group>
 	<level resource="@raw/puzzles_test" title = "@string/level_puzzle_test" time = "@string/level_test_time"/>
 	<level resource="@raw/objecttestmap" title = "@string/level_object_test" time = "@string/level_test_time"/>
