--- a/res/layout/slider_preference.xml
+++ b/res/layout/slider_preference.xml
@@ -13,7 +13,9 @@
 	<SeekBar xmlns:android="http://schemas.android.com/apk/res/android"
 		android:id="@+id/slider"
 		android:layout_height="wrap_content" 
-		android:layout_gravity="center_vertical" android:layout_width="250dp" android:layout_margin="10dp"/>
+		android:layout_gravity="center_vertical" 
+		android:layout_width="100dp" 
+		android:layout_margin="10dp"/>
 	<TextView xmlns:android="http://schemas.android.com/apk/res/android" 
 		android:id="@+id/max"
 		android:text="Max"
