--- a/res/values/kabocha.xml
+++ b/res/values/kabocha.xml
@@ -20,7 +20,7 @@ Jolly good!  You learn exactly as quickly as I calculated you would.  Fantastiqu
 </string>
 
 <string name="Kabocha_0_2_2_2">
-Now, rolling around is a pleasurable way to move, but to really travel in style you should fly.  <b>Tap the blue button on the lower left-hand side of the screen to jump, and hold it down to fly.</b>  Be careful though--your batteries can only hold you aloft for a short time before they need to recharge.  Watch the meter at the top left of the screen to see your remaining flight power.
+Now, rolling around is a pleasurable way to move, but to really travel in style you should fly.  <b>Tap the blue button on the bottom of the screen to jump, and hold it down to fly.</b>  Be careful though--your batteries can only hold you aloft for a short time before they need to recharge.  Watch the meter at the top left of the screen to see your remaining flight power.
 </string>
 
 <string name="Kabocha_0_2_2_3">
