--- a/res/values/wanda.xml
+++ b/res/values/wanda.xml
@@ -101,7 +101,7 @@ Kyle was my friend, but to you he was just an obstacle to overcome.  You probabl
 </string>
 
 <string name="Wanda_2_6_1_1">
-Hey Mr. Android, are you stuck?  Here, I'll clear a path for you.  
+Hey Mr. Android, are you stuck?  Here, I’ll clear a path for you.  
 </string>
 
 <string name="Wanda_2_6_2_1">
